fixed menu on mobile

--- a/sass/2-layouts/_body.sass
+++ b/sass/2-layouts/_body.sass
@@ -667,7 +667,7 @@
     flex-flow: row
     line-height: 50px
     margin-bottom: -65px
-    z-index: 9999999999
+    z-index: 9999
     justify-content: space-around
     @include phone-landscape
       padding-top: 0
